# redeye

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera.go  config.go  facedetect.go  filter.go  frame.go  go.mod  go.sum  img.cc  imgout.go  imgsrc.go  main.cc  mjpeg.go  pipeline.go  player.go  producers.go  resize.go  stream.go  streamer.go  video.go  vidsrc.go  web.go
archive/: config.go  mqtt.go  pipeline.go  video.go  vidsrc.go
archive/re/: camera.go  main.go
archive/vidsrc/gocv/: camera.go
cam/: main.go
filters/: colors.go  facedetect.go  filter.go  pipeline.go  resize.go
ocv/: facedetect.go  filter.go  pipeline.go  resize.go  streamer.go  vidcap.go  vidsrc.go
re/: main.go  mjpeg.go
redeye/: index.html  main.go
redeye/etc/: face.json
redeye/html/: index.html
src/: CMakeLists.txt  buffers.cc  buffers.hh  cmd.cc  cmd.hh  config.cc  config.hh  event.cc  event.hh  externs.hh  filter.hh  filters.cc  filters.hh  image.cc  image.hh  imgsrc.cc  imgsrc.hh  main.cc  message.cc  message.hh  mqtt.cc  mqtt.hh  net.cc  net.hh  player.cc  player.hh  video.cc  video.hh  web.cc  web.hh  win.cc  win.hh
src/filters/: CMakeLists.txt  filter.cc  filter.hh  filter_bigger.cc  filter_bigger.hh  filter_contour.cc  filter_contour.hh  filter_default.cc  filter_default.hh  filter_face_detect.cc  filter_face_detect.hh  filter_magnify.cc  filter_magnify.hh  filter_resize.cc  filter_resize.hh  filters.cc  filters.hh
stream/: main.go
vcr/: main.go
vidsrc/gocv/: vidsrc.go
www/: index.html
